@@ -16,12 +16,10 @@
  */
 package io.camunda.connector.http.base.client.apache.builder.parts;
 
+import com.google.api.client.http.GenericUrl;
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -30,24 +28,12 @@ public class UrlEncoder {
 
   public static URI toEncodedUri(String requestUrl, Boolean skipEncoding) {
     try {
-      // We try to decode the URL first, because it might be encoded already
-      // which would lead to double encoding. Decoding is safe here, because it does nothing if
-      // the URL is not encoded.
       if (skipEncoding) {
         return URI.create(requestUrl);
       }
-      var decodedUrl = URLDecoder.decode(requestUrl, StandardCharsets.UTF_8);
-      var url = new URL(decodedUrl);
-      // Only this URI constructor escapes the URL properly
-      return new URI(
-          url.getProtocol(),
-          url.getUserInfo(),
-          url.getHost(),
-          url.getPort(),
-          url.getPath(),
-          url.getQuery(),
-          null);
-    } catch (MalformedURLException | URISyntaxException e) {
+      URL url = new URL(requestUrl);
+      return new GenericUrl(url).toURI();
+    } catch (MalformedURLException e) {
       LOG.error("Failed to parse URL {}, defaulting to requestUrl", requestUrl, e);
       return URI.create(requestUrl);
     }
